--- a/module/Market/view/layout/layout.phtml
+++ b/module/Market/view/layout/layout.phtml
@@ -51,7 +51,7 @@
         <div class="container">
             <div class="col-lg-2">
                 <h3>Categories</h3>
-                <?php echo $this->leftLinks($this->categories, $this->basePath() . '/market/view/main'); ?>
+                <?php echo $this->htmllist($this->categories); ?>
             </div>
             <div class="col-lg-8">
                 <?php echo $this->content; ?>
