--- a/module/market/view/market/view/index.phtml
+++ b/module/market/view/market/view/index.phtml
@@ -1,1 +1,29 @@
 <?php echo "<h1>" . $this->escapehtml($this->category) . "</h1>"; ?>
+
+<?php if ($this->listings instanceof Zend\Db\ResultSet\ResultSet): ?>
+    <table>
+        <tr>
+            <th>Item</th>
+            <th>Price</th>
+            <th></th>
+            <th>Posted</th>
+        </tr>
+        <?php foreach ($this->listings as $item): ?>
+        <tr style="background-color: <?php echo $this->cycle(['#F9A770', '#FAC769', '#FAAE58'])->next(); ?>">
+            <td>
+                <a href="<?php echo $this->url('market/view/item', array('itemId' => (int)$item->listings_id)) ?>">
+                    <?php echo $this->escapehtml($item['title']); ?>
+                </a>
+            </td>
+            <td><?php echo $this->escapehtml((float)$item['price']); ?></td>
+            <td></td>
+            <td><?php echo $this->escapehtml($item['date_created']); ?></td>
+        </tr>
+        <?php endforeach; ?>
+
+    </table>
+<?php else: ?>
+
+    <?php Zend\Debug\Debug::dump($this->listings); ?>
+
+<?php endif; ?>
